Generified routes and handlers. Updated swagger docs.
