# internal/http/handlers/health.go
@@ -2,17 +2,20 @@ package handlers
 
 import "github.com/gofiber/fiber/v2"
 
+type HealthResponse struct {
+	Status string `json:"status"`
+}
+
 // GetHealth godoc
 // @Summary Get service health check status
 // @Description Returns server status check
 // @Tags health
-// @Accept json
 // @Produce json
-// @Success 200 {object} {"status": "ok"}
+// @Success 200 {object} HealthResponse
 // @Failure 500
 // @Router /health [get]
 func GetHealth(c *fiber.Ctx) error {
-	return c.JSON([]fiber.Map{
-		{"status": "ok"},
+	return c.JSON(HealthResponse{
+		Status: "ok",
 	})
 }
